--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-src/ios/DynamsoftBarcodeReader.framework/DynamsoftBarcodeReader filter=lfs diff=lfs merge=lfs -text
+DynamsoftBarcodeReader filter=lfs diff=lfs merge=lfs -text
