--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-DynamsoftBarcodeReader filter=lfs diff=lfs merge=lfs -text
+DynamsoftBarcodeReader.framework/DynamsoftBarcodeReader filter=lfs diff=lfs merge=lfs -text
