--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-DynamsoftBarcodeReader.framework/DynamsoftBarcodeReader filter=lfs diff=lfs merge=lfs -text
+src/ios/DynamsoftBarcodeReader.framework/dynamsoftbarcodereader filter=lfs diff=lfs merge=lfs -text
