--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 src/ios/DynamsoftBarcodeReader.framework/dynamsoftbarcodereader filter=lfs diff=lfs merge=lfs -text
+src/ios/DynamsoftBarcodeReader.framework/DynamsoftBarcodeReader filter=lfs diff=lfs merge=lfs -text
