--- a/src/android/barcodescanner.gradle
+++ b/src/android/barcodescanner.gradle
@@ -15,7 +15,7 @@ repositories{
 
 repositories {      
         maven {
-            url "http://download.dynamsoft.com/maven/dbr/aar"
+            url "http://download2.dynamsoft.com/maven/dbr/aar"
         }
     }
 
