--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dynamsoft-capture-vision-cordova",
-  "version": "1.0.0",
+  "version": "1.0.0-beta-3",
   "description": "Dynamsoft Capture Vision Cordova SDK",
   "homepage": "https://www.dynamsoft.com/capture-vision/docs/introduction",
   "main": "./www/index.js",
