--- a/src/android/barcodereader.gradle
+++ b/src/android/barcodereader.gradle
@@ -10,7 +10,7 @@ repositories{
 dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.dynamsoft:dynamsoftbarcodereader:9.2.10@aar'
-    implementation 'com.dynamsoft:dynamsoftcameraenhancer:2.3.3@aar'
+    implementation fileTree(dir: '../libs', include: ['*.aar'])
 }
 android {
     packagingOptions {
